Adding updated scraping.py file

--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -31,7 +31,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 3,
@@ -67,7 +67,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\"><a href=\"/news/8630/nasas-mars-perseverance-rover-gets-its-sample-handling-system/\" target=\"_self\">NASA's Mars Perseverance Rover Gets Its Sample Handling System</a></div>"
+       "<div class=\"content_title\"><a href=\"/news/8631/nasas-curiosity-mars-rover-takes-a-new-selfie-before-record-climb/\" target=\"_self\">NASA's Curiosity Mars Rover Takes a New Selfie Before Record Climb</a></div>"
       ]
      },
      "execution_count": 5,
@@ -88,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "\"NASA's Mars Perseverance Rover Gets Its Sample Handling System\""
+       "\"NASA's Curiosity Mars Rover Takes a New Selfie Before Record Climb\""
       ]
      },
      "execution_count": 6,
@@ -104,24 +104,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The system will be collecting and storing Martian rock and soil. Its installation marks another milestone in the march toward the July launch period.'"
+       "'Along with capturing an image before its steepest ascent ever, the robotic explorer filmed its \"selfie stick,\" or robotic arm, in action.'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#use the parent element to find the paragraph text\n",
-    "news_p = slide_elem.find('div', class_='article_teaser_body').get_text()\n",
-    "news_p"
+    "news_paragraph = slide_elem.find('div', class_='article_teaser_body').get_text()\n",
+    "news_paragraph"
    ]
   },
   {
@@ -195,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "'/spaceimages/images/largesize/PIA19039_hires.jpg'"
+       "'/spaceimages/images/largesize/PIA17832_hires.jpg'"
       ]
      },
      "execution_count": 12,
@@ -218,7 +218,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA19039_hires.jpg'"
+       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA17832_hires.jpg'"
       ]
      },
      "execution_count": 13,
@@ -258,10 +258,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>value</th>\n",
+       "      <th>Mars</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>description</th>\n",
+       "      <th>Description</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -307,8 +307,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                                              value\n",
-       "description                                        \n",
+       "                                               Mars\n",
+       "Description                                        \n",
        "Equatorial Diameter:                       6,792 km\n",
        "Polar Diameter:                            6,752 km\n",
        "Mass:                 6.39 × 10^23 kg (0.11 Earths)\n",
@@ -329,8 +329,8 @@
     "#scrape the entire table with Pandas’ .read_html() function.By specifying an index of 0, we’re telling \n",
     "#Pandas to pull only the first table it encounters.This table settings may need to be modified,if the website changes it.\n",
     "df = pd.read_html('https://space-facts.com/mars/')[0]\n",
-    "df.columns=['description', 'value']\n",
-    "df.set_index('description', inplace=True)\n",
+    "df.columns=['Description', 'Mars']\n",
+    "df.set_index('Description', inplace=True)\n",
     "df"
    ]
   },
@@ -342,7 +342,7 @@
     {
      "data": {
       "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>value</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Equatorial Diameter:</th>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>Polar Diameter:</th>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Distance:</th>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Period:</th>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>Surface Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>First Record:</th>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>Recorded By:</th>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Equatorial Diameter:</th>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>Polar Diameter:</th>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Distance:</th>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Period:</th>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>Surface Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>First Record:</th>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>Recorded By:</th>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
      "execution_count": 15,
